--- a/README.rdoc
+++ b/README.rdoc
@@ -1,10 +1,31 @@
+        --- Welcome to The Randomizer ---
+A platform to share recommendations with other locals and rediscover your city
 
 
-# Welcome to The Randomizer
+The Randomizer was developed during 2 weeks as a final project for the bootcamp http://www.ironhack.com/enIronHack, in Barcelona 
 
-## A platform to share recommendations with other locals and rediscover your city
+        
+        Share:
 
-The Randomizer was developed during 2 weeks as a final project for the bootcamp http://www.ironhack.com/enIronHack, in Barcelona </p>
+- The Randomizer allows for people to share their recommendations such as bars, restaurants, museums, clubs and many more
+    
+    
+        Rediscover:
 
-The Randomizer allows for people to share their recommendations such as bars, restaurants, museums, clubs and many more
+- The platform presents each user with 5 random recommendations every day.  After 24h they will be able to see 5 new ones
+    
+    
+        How does it work:
 
+- Users are controlled by a Karma system which distinguishes in between 3 roles: Regular, Ambassadors and Badkarma.  
+
+- Their interactions with the platform vary depending on their role
+
+- Recommendations are controlled by a point system that makes recommendations with bad feedback to disappear
+
+    
+        Main tools used:
+
+- Ruby on Rails (with Act as votable, Carriewave and Devise)
+
+- Rspec with (Factory Girl)
