--- a/README.rdoc
+++ b/README.rdoc
@@ -2,10 +2,9 @@
 A platform to share recommendations with other locals and rediscover your city
 
 
-The Randomizer was developed during 2 weeks as a final project for the bootcamp http://www.ironhack.com/enIronHack, in Barcelona 
+The Randomizer was developed during 2 weeks as a final project for the development bootcamp IronHack, in Barcelona.
 
-        
-        Share:
+         Share:
 
 - The Randomizer allows for people to share their recommendations such as bars, restaurants, museums, clubs and many more
     
