--- a/README.rdoc
+++ b/README.rdoc
@@ -4,12 +4,12 @@ A platform to share recommendations with other locals and rediscover your city
 
 The Randomizer was developed during 2 weeks as a final project for the development bootcamp IronHack, in Barcelona.
 
-         Share:
+        A platform to... Share:
 
 - The Randomizer allows for people to share their recommendations such as bars, restaurants, museums, clubs and many more
     
     
-        Rediscover:
+        & a platform to... Rediscover:
 
 - The platform presents each user with 5 random recommendations every day.  After 24h they will be able to see 5 new ones
     
